compilerGUI/ErrorLog.txt
~/CompileingCodeForAThing/compilerGUI$ clear&&javac * -Xdiags:verbose

ButtonListener.java:20: error: unreported exception IOException; must be caught or declared to be thrown
        ArrayList<String> out = compile.build(src.getText(),dest.getText());
                                             ^
                                             
Compile.java:38: error: no suitable method found for directory(String)
            Process p2 = new ProcessBuilder("javac *.java").directory(output.getAbsolutePath()).start(); //To be fixed later.
                                                           ^

Compile.java:40: error: no suitable method found for directory(String)
            Process p3 = new ProcessBuilder("del /s *.java").directory(output.getAbsolutePath()).start(); //To be fixed later
                                                            ^

Compile.java:43: error: cannot find symbol
            Process p1 = new ProcessBuilder("cp -r "+source.getAbsoluteDirectory()+" "+output.getAbsolutePath()).start();
                                                           ^
  symbol:   method getAbsoluteDirectory()
  location: variable source of type File
  
Compile.java:45: error: no suitable method found for directory(String)
            Process p2 = new ProcessBuilder("javac *.java").directory(output.getAbsolutePath()).start();//To be fixed later
                                                           ^
    method ProcessBuilder.directory() is not applicable
      (actual and formal argument lists differ in length)
    method ProcessBuilder.directory(File) is not applicable
      (argument mismatch; String cannot be converted to File)
      
Compile.java:47: error: no suitable method found for directory(String)
            Process p3 = new ProcessBuilder("rm -r *.java").directory(output.getAbsolutePath()).start();//To be fixed later
                                                           ^
    method ProcessBuilder.directory() is not applicable
      (actual and formal argument lists differ in length)
    method ProcessBuilder.directory(File) is not applicable
      (argument mismatch; String cannot be converted to File)
      
Compile.java:51: error: cannot find symbol
        Scanner s = new Scanner(p2.getOutputStream());
                                ^
  symbol:   variable p2
  location: class Compile
  
ErrorDialog.java:13: error: cannot find symbol
        close.addActionListener(new ActionListener(){
                                    ^
  symbol:   class ActionListener
  location: class ErrorDialog
  
ErrorDialog.java:15: error: cannot find symbol
            public void actionPerformed(ActionEvent e){
                                        ^
  symbol: class ActionEvent
  
ErrorDialog.java:14: error: method does not override or implement a method from a supertype
            @Override
            ^
            
ErrorDialog.java:19: error: cannot find symbol
        setLayout(new FLowLayout());
                      ^
  symbol:   class FLowLayout
  location: class ErrorDialog
  
Main.java:7: error: Main is not abstract and does not override abstract method actionPerformed(ActionEvent) in ActionListener
public class Main extends JFrame implements ActionListener{
       ^
13 errors
~/CompileingCodeForAThing/compilerGUI$ 
